--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -3,6 +3,6 @@
   "edition": "Developer",
   "country": "US",
   "language": "en_US",
-  "features": [],
+  "features": ["MultiCurrency"],
   "hasSampleData": true
 }
