Fixing UTC testing datetime issue when packaging after UTC midnight

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -75,6 +75,6 @@
         "apex-rollup@1.2.32-0": "04t6g000008SgbqAAC",
         "apex-rollup@1.2.33-0": "04t6g000008SgcyAAC",
         "apex-rollup@1.2.34-0": "04t6g000008SglrAAC",
-        "apex-rollup@1.2.35-0": "04t6g000008SgoWAAS"
+        "apex-rollup@1.2.35-0": "04t6g000008SgtNAAS"
     }
 }
