--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -42,7 +42,7 @@
     "packageAliases": {
         "apex-rollup": "0Ho6g000000TNcOCAW",
         "Apex Rollup - Custom Logger": "0Ho6g000000Gn8ZCAS",
-        "Apex Rollup - Custom Logger@0.0.1-0": "04t6g000008SgogAAC",
+        "Apex Rollup - Custom Logger@0.0.1-0": "04t6g000008SgtwAAC",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
         "Apex Rollup - Nebula Logger@0.0.1-0": "04t6g000008SgolAAC",
         "Nebula Logger - Unlocked Package@4.5.2-0-plugin-framework-enhancements": "04t5Y0000027FNaQAM",
@@ -75,6 +75,6 @@
         "apex-rollup@1.2.32-0": "04t6g000008SgbqAAC",
         "apex-rollup@1.2.33-0": "04t6g000008SgcyAAC",
         "apex-rollup@1.2.34-0": "04t6g000008SglrAAC",
-        "apex-rollup@1.2.35-0": "04t6g000008SgtNAAS"
+        "apex-rollup@1.2.35-0": "04t6g000008SguBAAS"
     }
 }
