--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,7 +4,7 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionNumber": "1.2.35.0",
+            "versionNumber": "1.2.36.0",
             "versionDescription": "Rollup logging to custom objects with support for Nebula Logger introduced",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest"
         },
@@ -16,7 +16,7 @@
                     "package": "apex-rollup@1.2.35-0"
                 }
             ],
-            "versionNumber": "0.0.1.0",
+            "versionNumber": "0.0.2.0",
             "versionDescription": "Introducing basic logging plugin",
             "default": false
         },
@@ -46,6 +46,7 @@
         "apex-rollup": "0Ho6g000000TNcOCAW",
         "Apex Rollup - Custom Logger": "0Ho6g000000Gn8ZCAS",
         "Apex Rollup - Custom Logger@0.0.1-0": "04t6g000008SgtwAAC",
+        "Apex Rollup - Custom Logger@0.0.2-0": "04t6g000008SgufAAC",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
         "Apex Rollup - Nebula Logger@0.0.1-0": "04t6g000008SgolAAC",
         "Nebula Logger - Unlocked Package@4.5.2-0-plugin-framework-enhancements": "04t5Y0000027FNaQAM",
@@ -78,6 +79,7 @@
         "apex-rollup@1.2.32-0": "04t6g000008SgbqAAC",
         "apex-rollup@1.2.33-0": "04t6g000008SgcyAAC",
         "apex-rollup@1.2.34-0": "04t6g000008SglrAAC",
-        "apex-rollup@1.2.35-0": "04t6g000008SguGAAS"
+        "apex-rollup@1.2.35-0": "04t6g000008SguGAAS",
+        "apex-rollup@1.2.36-0": "04t6g000008SguaAAC"
     }
 }
