--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -80,6 +80,7 @@
         "apex-rollup@1.2.33-0": "04t6g000008SgcyAAC",
         "apex-rollup@1.2.34-0": "04t6g000008SglrAAC",
         "apex-rollup@1.2.35-0": "04t6g000008SguGAAS",
-        "apex-rollup@1.2.36-0": "04t6g000008SguaAAC"
+        "apex-rollup@1.2.36-0": "04t6g000008SguaAAC",
+        "apex-rollup@1.2.37-0": "04t6g000008SguzAAC"
     }
 }
