--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -19,8 +19,8 @@
                     "package": "apex-rollup@1.2.37-0"
                 }
             ],
-            "versionNumber": "0.0.2.0",
-            "versionDescription": "Introducing basic logging plugin",
+            "versionNumber": "0.0.3.0",
+            "versionDescription": "Prevent string overflow on log messages",
             "default": false
         },
         {
@@ -28,7 +28,7 @@
             "path": "plugins/NebulaLogger",
             "dependencies": [
                 {
-                    "package": "apex-rollup@1.2.37-0"
+                    "package": "apex-rollup@1.2.38-0"
                 },
                 {
                     "package": "Nebula Logger - Unlocked Package@4.5.2-0-plugin-framework-enhancements"
@@ -51,6 +51,7 @@
         "Apex Rollup - Custom Logger": "0Ho6g000000Gn8ZCAS",
         "Apex Rollup - Custom Logger@0.0.1-0": "04t6g000008SgtwAAC",
         "Apex Rollup - Custom Logger@0.0.2-0": "04t6g000008SgufAAC",
+        "Apex Rollup - Custom Logger@0.0.3-0": "04t6g000008SgxPAAS",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
         "Apex Rollup - Nebula Logger@0.0.1-0": "04t6g000008SgolAAC",
         "Nebula Logger - Unlocked Package@4.5.2-0-plugin-framework-enhancements": "04t5Y0000027FNaQAM",
