--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,7 +5,7 @@
             "package": "apex-rollup",
             "path": "rollup",
             "versionNumber": "1.2.38.0",
-            "versionDescription": "Including extra code coverage during package version creation",
+            "versionDescription": "Including extra code coverage during package version creation, REFRESH updates",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
                 "path": "extra-tests"
@@ -16,7 +16,7 @@
             "path": "plugins/CustomObjectRollupLogger",
             "dependencies": [
                 {
-                    "package": "apex-rollup@1.2.37-0"
+                    "package": "apex-rollup@1.2.38-0"
                 }
             ],
             "versionNumber": "0.0.3.0",
@@ -87,6 +87,6 @@
         "apex-rollup@1.2.35-0": "04t6g000008SguGAAS",
         "apex-rollup@1.2.36-0": "04t6g000008SguaAAC",
         "apex-rollup@1.2.37-0": "04t6g000008SguzAAC",
-        "apex-rollup@1.2.38-0": "04t6g000008SgvxAAC"
+        "apex-rollup@1.2.38-0": "04t6g000008Sgy3AAC"
     }
 }
