--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -87,6 +87,6 @@
         "apex-rollup@1.2.35-0": "04t6g000008SguGAAS",
         "apex-rollup@1.2.36-0": "04t6g000008SguaAAC",
         "apex-rollup@1.2.37-0": "04t6g000008SguzAAC",
-        "apex-rollup@1.2.38-0": "04t6g000008SgyDAAS"
+        "apex-rollup@1.2.38-0": "04t6g000008SgySAAS"
     }
 }
