--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,20 +4,23 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionNumber": "1.2.37.0",
-            "versionDescription": "Fixing deferred rollup logic and adding more logging surrounding deferrals",
-            "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest"
+            "versionNumber": "1.2.38.0",
+            "versionDescription": "Including extra code coverage during package version creation, REFRESH updates",
+            "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
+            "unpackagedMetadata": {
+                "path": "extra-tests"
+            }
         },
         {
             "package": "Apex Rollup - Custom Logger",
             "path": "plugins/CustomObjectRollupLogger",
             "dependencies": [
                 {
-                    "package": "apex-rollup@1.2.37-0"
+                    "package": "apex-rollup@1.2.38-0"
                 }
             ],
-            "versionNumber": "0.0.2.0",
-            "versionDescription": "Introducing basic logging plugin",
+            "versionNumber": "0.0.3.0",
+            "versionDescription": "Prevent string overflow on log messages, added ErrorWouldHaveBeenThrown__c field on RollupLog__c",
             "default": false
         },
         {
@@ -25,7 +28,7 @@
             "path": "plugins/NebulaLogger",
             "dependencies": [
                 {
-                    "package": "apex-rollup@1.2.37-0"
+                    "package": "apex-rollup@1.2.38-0"
                 },
                 {
                     "package": "Nebula Logger - Unlocked Package@4.5.2-0-plugin-framework-enhancements"
@@ -36,7 +39,8 @@
             "default": false
         },
         {
-            "path": "extra-tests"
+            "path": "extra-tests",
+            "default": false
         }
     ],
     "namespace": "",
@@ -47,6 +51,7 @@
         "Apex Rollup - Custom Logger": "0Ho6g000000Gn8ZCAS",
         "Apex Rollup - Custom Logger@0.0.1-0": "04t6g000008SgtwAAC",
         "Apex Rollup - Custom Logger@0.0.2-0": "04t6g000008SgufAAC",
+        "Apex Rollup - Custom Logger@0.0.3-0": "04t6g000008SgyNAAS",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
         "Apex Rollup - Nebula Logger@0.0.1-0": "04t6g000008SgolAAC",
         "Nebula Logger - Unlocked Package@4.5.2-0-plugin-framework-enhancements": "04t5Y0000027FNaQAM",
@@ -81,6 +86,7 @@
         "apex-rollup@1.2.34-0": "04t6g000008SglrAAC",
         "apex-rollup@1.2.35-0": "04t6g000008SguGAAS",
         "apex-rollup@1.2.36-0": "04t6g000008SguaAAC",
-        "apex-rollup@1.2.37-0": "04t6g000008SguzAAC"
+        "apex-rollup@1.2.37-0": "04t6g000008SguzAAC",
+        "apex-rollup@1.2.38-0": "04t6g000008SgySAAS"
     }
 }
