Finishing touches on #148 to get build back to green

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -55,20 +55,6 @@
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
         "Apex Rollup - Nebula Logger@0.0.1-0": "04t6g000008SgolAAC",
         "Nebula Logger - Unlocked Package@4.5.2-0-plugin-framework-enhancements": "04t5Y0000027FNaQAM",
-        "apex-rollup@1.2.6-0": "04t6g000008GJMsAAO",
-        "apex-rollup@1.2.7-0": "04t6g000008GJNqAAO",
-        "apex-rollup@1.2.8-0": "04t6g000008GJNvAAO",
-        "apex-rollup@1.2.9-0": "04t6g000008GJQVAA4",
-        "apex-rollup@1.2.10-0": "04t6g000008GJRnAAO",
-        "apex-rollup@1.2.11-0": "04t6g000008GJSbAAO",
-        "apex-rollup@1.2.12-0": "04t6g000008GJYBAA4",
-        "apex-rollup@1.2.13-0": "04t6g000008GJeUAAW",
-        "apex-rollup@1.2.14-0": "04t6g000008GJjQAAW",
-        "apex-rollup@1.2.15-0": "04t6g000008GJlbAAG",
-        "apex-rollup@1.2.16-0": "04t6g000008GJm0AAG",
-        "apex-rollup@1.2.17-0": "04t6g000008nt3WAAQ",
-        "apex-rollup@1.2.18-0": "04t6g000008nt4PAAQ",
-        "apex-rollup@1.2.19-0": "04t6g000008nt5DAAQ",
         "apex-rollup@1.2.20-0": "04t6g000008nt5NAAQ",
         "apex-rollup@1.2.21-0": "04t6g000008nt6kAAA",
         "apex-rollup@1.2.22-0": "04t6g000008SgCUAA0",
@@ -87,6 +73,6 @@
         "apex-rollup@1.2.35-0": "04t6g000008SguGAAS",
         "apex-rollup@1.2.36-0": "04t6g000008SguaAAC",
         "apex-rollup@1.2.37-0": "04t6g000008SguzAAC",
-        "apex-rollup@1.2.38-0": "04t6g000008SgySAAS"
+        "apex-rollup@1.2.38-0": "04t6g000008SgyXAAS"
     }
 }
