Re-upped CustomObjectLogger version to correctly override the debug level plugin parameter. Added more documentation in respective READMEs

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -52,7 +52,7 @@
         "Apex Rollup - Custom Logger@0.0.1-0": "04t6g000008SgtwAAC",
         "Apex Rollup - Custom Logger@0.0.2-0": "04t6g000008SgufAAC",
         "Apex Rollup - Custom Logger@0.0.3-0": "04t6g000008SgyNAAS",
-        "Apex Rollup - Custom Logger@0.0.4-0": "04t6g000008Sh93AAC",
+        "Apex Rollup - Custom Logger@0.0.4-0": "04t6g000008Sh9DAAS",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
         "Apex Rollup - Nebula Logger@0.0.1-0": "04t6g000008SgolAAC",
         "Apex Rollup - Nebula Logger@0.0.2-0": "04t6g000008Sh8yAAC",
