--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -66,6 +66,6 @@
         "apex-rollup@1.2.36-0": "04t6g000008SguaAAC",
         "apex-rollup@1.2.37-0": "04t6g000008SguzAAC",
         "apex-rollup@1.2.38-0": "04t6g000008SgyXAAS",
-        "apex-rollup@1.2.39-0": "04t6g000008Sh9IAAS"
+        "apex-rollup@1.2.39-0": "04t6g000008Sh9hAAC"
     }
 }
