--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionNumber": "1.2.39.0",
-            "versionDescription": "Added additional logging for RollupEvaluator under the FINE logging level",
+            "versionNumber": "1.2.40.0",
+            "versionDescription": "Updated annotations to proper casing, fixed requeueing bug",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
                 "path": "extra-tests"
@@ -67,6 +67,7 @@
         "apex-rollup@1.2.36-0": "04t6g000008SguaAAC",
         "apex-rollup@1.2.37-0": "04t6g000008SguzAAC",
         "apex-rollup@1.2.38-0": "04t6g000008SgyXAAS",
-        "apex-rollup@1.2.39-0": "04t6g000008ShAVAA0"
+        "apex-rollup@1.2.39-0": "04t6g000008ShAVAA0",
+        "apex-rollup@1.2.40-0": "04t6g000008ShFvAAK"
     }
 }
