--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -68,6 +68,7 @@
         "apex-rollup@1.2.37-0": "04t6g000008SguzAAC",
         "apex-rollup@1.2.38-0": "04t6g000008SgyXAAS",
         "apex-rollup@1.2.39-0": "04t6g000008ShAVAA0",
-        "apex-rollup@1.2.40-0": "04t6g000008ShFvAAK"
+        "apex-rollup@1.2.40-0": "04t6g000008ShFvAAK",
+        "apex-rollup@1.2.41-0": "04t6g000008ShIGAA0"
     }
 }
