--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,7 +5,7 @@
             "package": "apex-rollup",
             "path": "rollup",
             "versionNumber": "1.2.41.0",
-            "versionDescription": "Updated annotations to proper casing, fixed requeueing bug",
+            "versionDescription": "Massive efficiency improvements for Flow invocations",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
                 "path": "extra-tests"
@@ -69,6 +69,6 @@
         "apex-rollup@1.2.38-0": "04t6g000008SgyXAAS",
         "apex-rollup@1.2.39-0": "04t6g000008ShAVAA0",
         "apex-rollup@1.2.40-0": "04t6g000008ShFvAAK",
-        "apex-rollup@1.2.41-0": "04t6g000008ShIGAA0"
+        "apex-rollup@1.2.41-0": "04t6g000008ShIkAAK"
     }
 }
