--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -69,6 +69,6 @@
         "apex-rollup@1.2.38-0": "04t6g000008SgyXAAS",
         "apex-rollup@1.2.39-0": "04t6g000008ShAVAA0",
         "apex-rollup@1.2.40-0": "04t6g000008ShFvAAK",
-        "apex-rollup@1.2.41-0": "04t6g000008ShIuAAK"
+        "apex-rollup@1.2.41-0": "04t6g000008ShIzAAK"
     }
 }
