--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -70,6 +70,6 @@
         "apex-rollup@1.2.39-0": "04t6g000008ShAVAA0",
         "apex-rollup@1.2.40-0": "04t6g000008ShFvAAK",
         "apex-rollup@1.2.41-0": "04t6g000008ShJEAA0",
-        "apex-rollup@1.2.42-0": "04t6g000008ShKHAA0"
+        "apex-rollup@1.2.42-0": "04t6g000008ShKRAA0"
     }
 }
