Adding in a few more safety precautions when it comes to multi-currency calculations - revised Readme with explicit extent of support (up to but not including support for DatedConverstionRate-based multi-currency orgs)

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -2,7 +2,7 @@
     "packageDirectories": [
         {
             "default": true,
-            "package": "Apex Rollup",
+            "package": "apex-rollup",
             "path": "rollup",
             "versionNumber": "1.2.43.0",
             "versionDescription": "Multi-currency rollups, bugfixes",
