--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -71,6 +71,6 @@
         "apex-rollup@1.2.40-0": "04t6g000008ShFvAAK",
         "apex-rollup@1.2.41-0": "04t6g000008ShJEAA0",
         "apex-rollup@1.2.42-0": "04t6g000008ShMNAA0",
-        "apex-rollup@1.2.43-0": "04t6g000008ShPCAA0"
+        "apex-rollup@1.2.43-0": "04t6g000008ShPMAA0"
     }
 }
