--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionNumber": "1.2.43.0",
-            "versionDescription": "Multi-currency rollups, bugfixes",
+            "versionNumber": "1.2.44.0",
+            "versionDescription": "Fixes parent-level filtering for Flow",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
                 "path": "extra-tests"
