Adding @jongpie feedback for Rollup Callback plugin, with example LWC for displaying a notification on the parent-level record when it's been updated

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -77,7 +77,7 @@
         "Apex Rollup - Nebula Logger@0.0.3-0": "04t6g000008ShPlAAK",
         "Nebula Logger - Unlocked Package@4.5.2-0-plugin-framework-enhancements": "04t5Y0000027FNaQAM",
         "Apex Rollup - Rollup Callback": "0Ho6g000000GnA1CAK",
-        "Apex Rollup - Rollup Callback@0.0.1-0": "04t6g000008ShPqAAK",
+        "Apex Rollup - Rollup Callback@0.0.1-0": "04t6g000008ShRmAAK",
         "apex-rollup@1.2.37-0": "04t6g000008SguzAAC",
         "apex-rollup@1.2.38-0": "04t6g000008SgyXAAS",
         "apex-rollup@1.2.39-0": "04t6g000008ShAVAA0",
