Updating logging plugins to ensure pre-req Rollup Plugin metadata records are there; updated documentation to reflect that they are included upon install

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -74,7 +74,7 @@
         "Apex Rollup - Custom Logger@0.0.6-0": "04t6g000008ShPgAAK",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
         "Apex Rollup - Nebula Logger@0.0.2-0": "04t6g000008Sh8yAAC",
-        "Apex Rollup - Nebula Logger@0.0.3-0": "04t6g000008ShPlAAK",
+        "Apex Rollup - Nebula Logger@0.0.3-0": "04t6g000008ShSGAA0",
         "Nebula Logger - Unlocked Package@4.5.2-0-plugin-framework-enhancements": "04t5Y0000027FNaQAM",
         "Apex Rollup - Rollup Callback": "0Ho6g000000GnA1CAK",
         "Apex Rollup - Rollup Callback@0.0.1-0": "04t6g000008ShRmAAK",
