Adding further logging to debug Maximum Stack Depth Reached issue reported by Katherine West

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -85,6 +85,6 @@
         "apex-rollup@1.2.41-0": "04t6g000008ShJEAA0",
         "apex-rollup@1.2.42-0": "04t6g000008ShMNAA0",
         "apex-rollup@1.2.43-0": "04t6g000008ShPMAA0",
-        "apex-rollup@1.2.44-0": "04t6g000008ShSQAA0"
+        "apex-rollup@1.2.44-0": "04t6g000008ShSaAAK"
     }
 }
