--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionNumber": "1.2.43.0",
-            "versionDescription": "Multi-currency rollups, bugfixes",
+            "versionNumber": "1.3.0.0",
+            "versionDescription": "Fixes parent-level filtering for Flow, deprecated RollupLoggerPlugin__mdt in favor of RollupPlugin__mdt, adds PMD analysis",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
                 "path": "extra-tests"
@@ -16,27 +16,48 @@
             "path": "plugins/CustomObjectRollupLogger",
             "dependencies": [
                 {
-                    "package": "apex-rollup@1.2.39-0"
+                    "package": "apex-rollup@1.3.0-0"
                 }
             ],
-            "versionNumber": "0.0.5.0",
-            "versionDescription": "Added logging level to log options and reworked logging plugin structure",
-            "default": false
+            "versionNumber": "0.0.6.0",
+            "versionDescription": "Deprecated RollupLoggerPlugin__mdt in favor of RollupPlugin__mdt",
+            "default": false,
+            "unpackagedMetadata": {
+                "path": "plugins/CustomObjectRollupLogger/tests"
+            }
         },
         {
             "package": "Apex Rollup - Nebula Logger",
             "path": "plugins/NebulaLogger",
             "dependencies": [
                 {
-                    "package": "apex-rollup@1.2.39-0"
+                    "package": "apex-rollup@1.3.0-0"
                 },
                 {
                     "package": "Nebula Logger - Unlocked Package@4.5.2-0-plugin-framework-enhancements"
                 }
             ],
-            "versionNumber": "0.0.2.0",
-            "versionDescription": "Reworked logging plugin structure",
-            "default": false
+            "versionNumber": "0.0.3.0",
+            "versionDescription": "Deprecated RollupLoggerPlugin__mdt in favor of RollupPlugin__mdt",
+            "default": false,
+            "unpackagedMetadata": {
+                "path": "plugins/NebulaLogger/tests"
+            }
+        },
+        {
+            "package": "Apex Rollup - Rollup Callback",
+            "path": "plugins/RollupCallback",
+            "dependencies": [
+                {
+                    "package": "apex-rollup@1.3.0-0"
+                }
+            ],
+            "versionNumber": "0.0.1.0",
+            "versionDescription": "Introducing callback mechanism to interact with updated Rollup records",
+            "default": false,
+            "unpackagedMetadata": {
+                "path": "plugins/RollupCallback/tests"
+            }
         },
         {
             "path": "extra-tests",
@@ -49,28 +70,22 @@
     "packageAliases": {
         "apex-rollup": "0Ho6g000000TNcOCAW",
         "Apex Rollup - Custom Logger": "0Ho6g000000Gn8ZCAS",
-        "Apex Rollup - Custom Logger@0.0.1-0": "04t6g000008SgtwAAC",
-        "Apex Rollup - Custom Logger@0.0.2-0": "04t6g000008SgufAAC",
-        "Apex Rollup - Custom Logger@0.0.3-0": "04t6g000008SgyNAAS",
-        "Apex Rollup - Custom Logger@0.0.4-0": "04t6g000008ShA1AAK",
         "Apex Rollup - Custom Logger@0.0.5-0": "04t6g000008ShAfAAK",
+        "Apex Rollup - Custom Logger@0.0.6-0": "04t6g000008ShT9AAK",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
-        "Apex Rollup - Nebula Logger@0.0.1-0": "04t6g000008SgolAAC",
         "Apex Rollup - Nebula Logger@0.0.2-0": "04t6g000008Sh8yAAC",
+        "Apex Rollup - Nebula Logger@0.0.3-0": "04t6g000008ShTEAA0",
         "Nebula Logger - Unlocked Package@4.5.2-0-plugin-framework-enhancements": "04t5Y0000027FNaQAM",
-        "apex-rollup@1.2.30-0": "04t6g000008SgSsAAK",
-        "apex-rollup@1.2.31-0": "04t6g000008SgaiAAC",
-        "apex-rollup@1.2.32-0": "04t6g000008SgbqAAC",
-        "apex-rollup@1.2.33-0": "04t6g000008SgcyAAC",
-        "apex-rollup@1.2.34-0": "04t6g000008SglrAAC",
-        "apex-rollup@1.2.35-0": "04t6g000008SguGAAS",
-        "apex-rollup@1.2.36-0": "04t6g000008SguaAAC",
+        "Apex Rollup - Rollup Callback": "0Ho6g000000GnA1CAK",
+        "Apex Rollup - Rollup Callback@0.0.1-0": "04t6g000008ShTJAA0",
         "apex-rollup@1.2.37-0": "04t6g000008SguzAAC",
         "apex-rollup@1.2.38-0": "04t6g000008SgyXAAS",
         "apex-rollup@1.2.39-0": "04t6g000008ShAVAA0",
         "apex-rollup@1.2.40-0": "04t6g000008ShFvAAK",
         "apex-rollup@1.2.41-0": "04t6g000008ShJEAA0",
         "apex-rollup@1.2.42-0": "04t6g000008ShMNAA0",
-        "apex-rollup@1.2.43-0": "04t6g000008ShPMAA0"
+        "apex-rollup@1.2.43-0": "04t6g000008ShPMAA0",
+        "apex-rollup@1.2.44-0-beta-package-only": "04t6g000008ShSaAAK",
+        "apex-rollup@1.3.0-0": "04t6g000008ShUCAA0"
     }
 }
