Doing some cleanup on the v1.3.0 release - making the pipeline more resilient by hardening the scripts/build-and-promote-package.ps1 ability to find the prior package version, removing some duplication between deploy.yml and package.json npm scripts, and removed this.syncRollups property from RollupAsyncProcessor to cut down on heap size, made runCalc logic easier to follow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -73,7 +73,7 @@ jobs:
       - name: Install & run SFDX Scanner
         run: |
           sfdx plugins:install @salesforce/sfdx-scanner
-          sfdx scanner:run --pmdconfig config/pmd-ruleset.xml --target . --engine pmd --severity-threshold 3
+          npm run scan
 
       # Store secret for dev hub
       - name: 'Populate auth file with DEVHUB_SFDX_URL secret'
