--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -86,6 +86,7 @@
         "apex-rollup@1.2.42-0": "04t6g000008ShMNAA0",
         "apex-rollup@1.2.43-0": "04t6g000008ShPMAA0",
         "apex-rollup@1.2.44-0-beta-package-only": "04t6g000008ShSaAAK",
-        "apex-rollup@1.3.0-0": "04t6g000008ShUCAA0"
+        "apex-rollup@1.3.0-0": "04t6g000008ShUCAA0",
+        "apex-rollup@1.3.1-0": "04t6g000008ShZ8AAK"
     }
 }
