--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionNumber": "1.3.2.0",
-            "versionDescription": "FullBatchRecalculator bugfix, added in Queueable Finalizer",
+            "versionNumber": "1.3.3.0",
+            "versionDescription": "Updating documentation",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
                 "path": "extra-tests"
@@ -88,6 +88,7 @@
         "apex-rollup@1.2.44-0-beta-package-only": "04t6g000008ShSaAAK",
         "apex-rollup@1.3.0-0": "04t6g000008ShUCAA0",
         "apex-rollup@1.3.1-0": "04t6g000008ShZ8AAK",
-        "apex-rollup@1.3.2-0": "04t6g000008ShapAAC"
+        "apex-rollup@1.3.2-0": "04t6g000008ShapAAC",
+        "apex-rollup@1.3.3-0": "04t6g000008ShbnAAC"
     }
 }
