--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionNumber": "1.3.3.0",
-            "versionDescription": "Updating documentation",
+            "versionNumber": "1.3.4.0",
+            "versionDescription": "Multi-currency bugfix for RollupParentResetProcessor",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
                 "path": "extra-tests"
