--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionNumber": "1.3.3.0",
-            "versionDescription": "Updating documentation",
+            "versionNumber": "1.3.4.0",
+            "versionDescription": "Multi-currency bugfix for RollupParentResetProcessor",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
                 "path": "extra-tests"
@@ -89,6 +89,7 @@
         "apex-rollup@1.3.0-0": "04t6g000008ShUCAA0",
         "apex-rollup@1.3.1-0": "04t6g000008ShZ8AAK",
         "apex-rollup@1.3.2-0": "04t6g000008ShapAAC",
-        "apex-rollup@1.3.3-0": "04t6g000008ShbnAAC"
+        "apex-rollup@1.3.3-0": "04t6g000008ShbnAAC",
+        "apex-rollup@1.3.4-0": "04t6g000008ShgeAAC"
     }
 }
