--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -19,8 +19,8 @@
                     "package": "apex-rollup@1.3.0-0"
                 }
             ],
-            "versionNumber": "0.0.6.0",
-            "versionDescription": "Deprecated RollupLoggerPlugin__mdt in favor of RollupPlugin__mdt",
+            "versionNumber": "0.0.7.0",
+            "versionDescription": "Updating All List View to include sensible fields for viewing logs",
             "default": false,
             "unpackagedMetadata": {
                 "path": "plugins/CustomObjectRollupLogger/tests"
@@ -70,8 +70,8 @@
     "packageAliases": {
         "apex-rollup": "0Ho6g000000TNcOCAW",
         "Apex Rollup - Custom Logger": "0Ho6g000000Gn8ZCAS",
-        "Apex Rollup - Custom Logger@0.0.5-0": "04t6g000008ShAfAAK",
         "Apex Rollup - Custom Logger@0.0.6-0": "04t6g000008ShT9AAK",
+        "Apex Rollup - Custom Logger@0.0.7-0": "04t6g000008Shh3AAC",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
         "Apex Rollup - Nebula Logger@0.0.2-0": "04t6g000008Sh8yAAC",
         "Apex Rollup - Nebula Logger@0.0.3-0": "04t6g000008ShTEAA0",
