--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,7 +5,7 @@
             "package": "apex-rollup",
             "path": "rollup",
             "versionNumber": "1.3.5.0",
-            "versionDescription": "Internal bookkeeping updates",
+            "versionDescription": "Internal bookkeeping updates, fixes for combined Rollup loggers, bugfixes for Rollup Evaluator",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
                 "path": "extra-tests"
