--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -90,6 +90,7 @@
         "apex-rollup@1.3.1-0": "04t6g000008ShZ8AAK",
         "apex-rollup@1.3.2-0": "04t6g000008ShapAAC",
         "apex-rollup@1.3.3-0": "04t6g000008ShbnAAC",
-        "apex-rollup@1.3.4-0": "04t6g000008ShgeAAC"
+        "apex-rollup@1.3.4-0": "04t6g000008ShgeAAC",
+        "apex-rollup@1.3.5-0": "04t6g000008ShhDAAS"
     }
 }
