--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -91,6 +91,6 @@
         "apex-rollup@1.3.2-0": "04t6g000008ShapAAC",
         "apex-rollup@1.3.3-0": "04t6g000008ShbnAAC",
         "apex-rollup@1.3.4-0": "04t6g000008ShgeAAC",
-        "apex-rollup@1.3.5-0": "04t6g000008ShhDAAS"
+        "apex-rollup@1.3.5-0": "04t6g000008ShhIAAS"
     }
 }
