--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -88,6 +88,6 @@
         "apex-rollup@1.3.3-0": "04t6g000008ShbnAAC",
         "apex-rollup@1.3.4-0": "04t6g000008ShgeAAC",
         "apex-rollup@1.3.5-0": "04t6g000008ShhXAAS",
-        "apex-rollup@1.3.6-0": "04t6g000008ShmOAAS"
+        "apex-rollup@1.3.6-0": "04t6g000008Shn2AAC"
     }
 }
