--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionNumber": "1.3.6.0",
-            "versionDescription": "Fixed a pass by reference issue in RollupFlowBulkProcessor reported by Ryan Gramer",
+            "versionNumber": "1.3.7.0",
+            "versionDescription": "Adds parent-level filtering via Calc Item Where Clause support to Apex Rollup",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
                 "path": "extra-tests"
