--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -89,6 +89,7 @@
         "apex-rollup@1.3.4-0": "04t6g000008ShgeAAC",
         "apex-rollup@1.3.5-0": "04t6g000008ShhXAAS",
         "apex-rollup@1.3.6-0": "04t6g000008Shn7AAC",
-        "Apex Rollup - Rollup Callback@0.0.2-0": "04t6g000008ShztAAC"
+        "Apex Rollup - Rollup Callback@0.0.2-0": "04t6g000008ShztAAC",
+        "apex-rollup@1.3.7-0": "04t6g000008ShzyAAC"
     }
 }
