--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -90,6 +90,6 @@
         "apex-rollup@1.3.4-0": "04t6g000008ShgeAAC",
         "apex-rollup@1.3.5-0": "04t6g000008ShhXAAS",
         "apex-rollup@1.3.6-0": "04t6g000008Shn7AAC",
-        "apex-rollup@1.3.7-0": "04t6g000008ShzyAAC"
+        "apex-rollup@1.3.7-0": "04t6g000008Si03AAC"
     }
 }
