--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -103,6 +103,6 @@
         "apex-rollup@1.3.19-0": "04t6g000008SiVIAA0",
         "apex-rollup@1.3.20-0": "04t6g000008SiaJAAS",
         "apex-rollup@1.3.21-0": "04t6g000008SigrAAC",
-        "apex-rollup@1.3.22-0": "04t6g000008SihQAAS"
+        "apex-rollup@1.3.22-0": "04t6g000008SihaAAC"
     }
 }
