--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@salesforce/eslint-plugin-aura": "latest",
     "@salesforce/eslint-plugin-lightning": "latest",
     "@salesforce/sfdx-lwc-jest": "0.12.5",
+    "@salesforce/sfdx-scanner": "latest",
     "eslint": "latest",
     "eslint-config-prettier": "latest",
     "husky": "latest",
@@ -44,7 +45,7 @@
     "create:package:code-coverage": "pwsh ./scripts/generateExtraCodeCoveragePlugin.ps1",
     "husky:pre-commit": "lint-staged",
     "lint:verify": "eslint **/lwc/**",
-    "prepare": "husky install",
+    "prepare": "husky install && sfdx plugins:link ./node_modules/@salesforce/sfdx-scanner",
     "prettier": "prettier",
     "scan": "sfdx scanner:run --pmdconfig config/pmd-ruleset.xml --target . --engine pmd --severity-threshold 3",
     "test": "npm run test:apex && npm run test:lwc",
