--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -94,6 +94,7 @@
         "Apex Rollup - Rollup Callback@0.0.2-0": "04t6g000008ShztAAC",
         "Apex Rollup - Extra Code Coverage": "0Ho6g000000GnCWCA0",
         "Apex Rollup - Extra Code Coverage@0.0.1-0": "04t6g000008SiTHAA0",
+        "Apex Rollup - Extra Code Coverage@0.0.2-0": "04t6g000008SihpAAC",
         "apex-rollup@1.3.0-0": "04t6g000008ShUCAA0",
         "apex-rollup@1.3.8-0": "04t6g000008Si24AAC",
         "apex-rollup@1.3.15-0": "04t6g000008SiRGAA0",
@@ -103,7 +104,6 @@
         "apex-rollup@1.3.19-0": "04t6g000008SiVIAA0",
         "apex-rollup@1.3.20-0": "04t6g000008SiaJAAS",
         "apex-rollup@1.3.21-0": "04t6g000008SigrAAC",
-        "apex-rollup@1.3.22-0": "04t6g000008SihuAAC",
-        "Apex Rollup - Extra Code Coverage@0.0.2-0": "04t6g000008SihpAAC"
+        "apex-rollup@1.3.22-0": "04t6g000008SihuAAC"
     }
 }
