Added base logging string to custom object logger plugin

--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
   ],
   "scripts": {
     "create:package:rollup": "sfdx force:package:version:create --package \"apex-rollup\" -w 20 -x -c",
-    "create:package:nebula:adapter": "sfdx force:package:version:create --package \"Apex Rollup - Nebula Logger\" -w 20 -x -c",
-    "create:package:logger": "sfdx force:package:version:create --package \"Apex Rollup - Custom Logger\" -w 20 -x -c",
-    "create:package:callback": "sfdx force:package:version:create --package \"Apex Rollup - Rollup Callback\" -w 20 -x -c",
-    "create:package:code-coverage": "pwsh ./scripts/generateExtraCodeCoveragePlugin.ps1",
+    "create:package:nebula:adapter": "pwsh -Command \"&{ . ./scripts/generatePlugin.ps1; Generate -PackageName '\"Apex Rollup - Nebula Logger\"' -ReadmePath \"./plugins/NebulaLogger/README.md\" }\"",
+    "create:package:logger": "pwsh -Command \"&{ . ./scripts/generatePlugin.ps1; Generate -PackageName '\"Apex Rollup - Custom Logger\"' -ReadmePath \"./plugins/CustomObjectRollupLogger/README.md\" }\"",
+    "create:package:callback": "pwsh -Command \"&{ . ./scripts/generatePlugin.ps1; Generate -PackageName '\"Apex Rollup - Rollup Callback\"' -ReadmePath \"./plugins/RollupCallback/README.md\"\" }\"",
+    "create:package:code-coverage": "pwsh -Command \"&{ . ./scripts/generatePlugin.ps1; Generate -PackageName '\"Apex Rollup - Extra Code Coverage\"' -ReadmePath \"./plugins/ExtraCodeCoverage/README.md\" }\"",
     "husky:pre-commit": "lint-staged",
     "lint:verify": "eslint **/lwc/**",
     "prepare": "husky install && sfdx plugins:link ./node_modules/@salesforce/sfdx-scanner",
