--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -17,10 +17,11 @@
             "path": "plugins\\CustomObjectRollupLogger",
             "dependencies": [
                 {
-                    "package": "apex-rollup@1.3.8-0"
+                    "package": "apex-rollup@1.3.22-0"
                 }
             ],
-            "versionNumber": "0.0.9.0",
+            "versionNumber": "0.0.10.0",
+            "versionName": "Adding base Rollup string and version number",
             "versionDescription": "Adds RollupLog__c and RollupLogEntry__c custom objects to allow storage of rollup debug logs",
             "default": false,
             "unpackagedMetadata": {
@@ -84,10 +85,9 @@
     "packageAliases": {
         "apex-rollup": "0Ho6g000000TNcOCAW",
         "Apex Rollup - Custom Logger": "0Ho6g000000Gn8ZCAS",
-        "Apex Rollup - Custom Logger@0.0.8-0": "04t6g000008ShzjAAC",
         "Apex Rollup - Custom Logger@0.0.9-0": "04t6g000008Si1GAAS",
+        "Apex Rollup - Custom Logger@0.0.10-0": "04t6g000008SijqAAC",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
-        "Apex Rollup - Nebula Logger@0.0.4-0": "04t6g000008ShzoAAC",
         "Apex Rollup - Nebula Logger@0.0.5-0": "04t6g000008Si1BAAS",
         "Apex Rollup - Nebula Logger@0.0.6-0": "04t6g000008SiisAAC",
         "Nebula Logger - Unlocked Package@4.5.2-0-plugin-framework-enhancements": "04t5Y0000027FNaQAM",
@@ -98,14 +98,12 @@
         "Apex Rollup - Extra Code Coverage@0.0.1-0": "04t6g000008SiTHAA0",
         "Apex Rollup - Extra Code Coverage@0.0.3-0": "04t6g000008Sii9AAC",
         "apex-rollup@1.3.0-0": "04t6g000008ShUCAA0",
-        "apex-rollup@1.3.8-0": "04t6g000008Si24AAC",
-        "apex-rollup@1.3.15-0": "04t6g000008SiRGAA0",
         "apex-rollup@1.3.16-0": "04t6g000008SiSdAAK",
         "apex-rollup@1.3.17-0": "04t6g000008SiTgAAK",
         "apex-rollup@1.3.18-0": "04t6g000008SiUyAAK",
         "apex-rollup@1.3.19-0": "04t6g000008SiVIAA0",
         "apex-rollup@1.3.20-0": "04t6g000008SiaJAAS",
         "apex-rollup@1.3.21-0": "04t6g000008SigrAAC",
-        "apex-rollup@1.3.22-0": "04t6g000008SiixAAC"
+        "apex-rollup@1.3.22-0": "04t6g000008SijgAAC"
     }
 }
